fix dark mode on ios

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -117,6 +117,7 @@
     --ion-item-background-color: #171717;
     --ion-item-border-color: #444;
     --ion-text-color: #666;
+    --ion-text-color-rgb: 136, 136, 136;
     --ion-text-color-step-400: #666;
     --ion-text-color-step-600: #666;
   }
